[project]
name = "custom-protobuf"
version = "0.0.0"
description = "Example of logging custom protobuf messages in Foxglove"
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "foxglove-sdk>=0.4.0",
    "numpy>=2.0",
    "protobuf (>=6.30.2,<7.0.0)",
]

[dependency-groups]
dev = [
  "black>=25.1.0,<26",
  "isort>=6.0.0,<7",
  "mypy>=1,<2",
]

[tool.uv]
package = false
