[project]
name = "logging-context"
version = "0.0.0"
description = "Example of using Context"
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["foxglove-sdk>=0.7.1"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1"
