[project]
name = "logging-context"
version = "0.0.0"
description = "Example of using Context"
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = ["foxglove-sdk>=0.7.1"]

[dependency-groups]
dev = ["mypy>=1,<2"]

[tool.uv]
package = false
