[project]
name = "message-filtering"
version = "0.0.0"
description = "Example message filtering with MCAP and live visualization"
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["foxglove-sdk"]

[dependency-groups]
dev = ["mypy>=1,<2"]

[tool.uv]
package = false
