[project]
name = "quickstart"
version = "0.0.0"
description = "Log to MCAP and visualize inFoxglove"
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "foxglove-sdk>=0.4.0",
    "mcap>=1.2",
]

[dependency-groups]
dev = ["mypy>=1,<2"]

[tool.uv]
package = false
