[project]
name = "remote-access"
version = "0.0.0"
description = "Example of remote access in Foxglove"
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "foxglove-sdk>=0.23.0",
]

[dependency-groups]
dev = ["mypy>=1,<2"]

[tool.uv]
package = false
