[project]
name = "ws-connection-graph"
version = "0.0.0"
description = "Visualize a connection graph in Foxglove"
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = ["foxglove-sdk"]

[dependency-groups]
dev = ["mypy>=1,<2"]

[tool.uv]
package = false
