[project]
name = "ws-param-server"
version = "0.0.0"
description = "A parameter server for Foxglove live visualization"
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["foxglove-sdk>=0.4.0"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1"
