[project]
name = "ws-param-server"
version = "0.0.0"
description = "A parameter server for Foxglove live visualization"
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = ["foxglove-sdk>=0.4.0"]

[dependency-groups]
dev = ["mypy>=1,<2"]

[tool.uv]
package = false
